samples/_failures_safe/1761510813_3edad7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fe96e9c.c: In function ‘main’:
./samples/SAFE/__tmp_3fe96e9c.c:144:12: error: missing terminating " character
  144 |     printf("DEBUG: %.2f%%\
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3fe96e9c.c:144:5: error: expected expression at end of input
  144 |     printf("DEBUG: %.2f%%\
      |     ^~~~~~
./samples/SAFE/__tmp_3fe96e9c.c:144:5: error: expected declaration or statement at end of input
